--- a/view/header.html
+++ b/view/header.html
@@ -58,6 +58,9 @@
             color: white;
             font-size: 18px; /* Tăng kích thước icon */
         }
+        .banner img{
+            
+        }
     </style>
 </head>
 <body>
@@ -82,6 +85,8 @@
             </div>
         </div>
     </header>
-    
+    <div class="banner">
+        <img src="../public/img/banner.png" alt="">
+    </div>
 </body>
 </html>
