--- a/view/header.html
+++ b/view/header.html
@@ -59,7 +59,9 @@
             font-size: 18px; /* Tăng kích thước icon */
         }
         .banner img{
-            
+            max-width: 1800px;
+            width: 100%;
+            height: 800px;
         }
     </style>
 </head>
