--- a/public/css/home.css
+++ b/public/css/home.css
@@ -53,9 +53,19 @@ ul li a {
     font-size: 18px; /* Tăng kích thước icon */
 }
 /* Home */
-.bannerphu img{
-
+.bannerphu {
+    display: flex; /* Kích hoạt Flexbox */
+    justify-content: center; /* Căn ngang */
+    align-items: center; /* Căn dọc */
+    height: 200px; /* Đặt chiều cao cố định nếu cần */
+}
+.bannerphu img {
+    max-width: 100%; /* Đảm bảo ảnh không vượt quá kích thước container */
+    height: 250; /* Giữ tỷ lệ ảnh */
 }
 h3{
+    font-size: 28px;
     text-align: center;
+    padding: 30px;
+    color: #8F7D5E;
 }
