--- a/public/css/home.css
+++ b/public/css/home.css
@@ -69,3 +69,31 @@ h3{
     padding: 30px;
     color: #8F7D5E;
 }
+
+.row {
+    display: flex;
+    gap: 20px;
+    width: 80%;
+    margin: 0 auto;
+    
+    
+}
+.row2 {
+    display: flex;
+    gap: 20px;
+    width: 80%;
+    margin: 0 auto;
+    
+    
+}
+.hinh22{
+    background-color: #fff;
+    border-radius: 15px;
+    border: none;
+}
+.hinh20{
+    width: 100%; 
+   
+  
+
+}
