--- a/view/home.html
+++ b/view/home.html
@@ -11,6 +11,70 @@
         <img src="../public/img/logo phụ.png" alt="">
      </div>
 
+     <div class="container">
+        <div class="row">
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+                
+            </div>
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+            </div>
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+            </div>
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+                
+            </div>
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+            </div>
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+            </div>
+            <div class="col4">
+                <img src="../public/img/h7.png" alt="">
+                <h4 class="name">THẮT LƯNG PIERRE CARDIN BE-P 2228</h4>
+                <p>Giá: 2.990.000₫</p>
+                <button>Mua ngay</button>
+                <p class="sohang">Hàng còn: 12 cái</p>
+            </div>
+        </div>
+
      </div>
 </body>
 </html>
