--- a/public/css/home.css
+++ b/public/css/home.css
@@ -81,7 +81,8 @@ ul li a {
 }
 .bannerphu img {
     max-width: 100%;
-    height: 250; 
+    height: 250px;
+    margin-top: 20px; 
 }
 h3{
     font-size: 28px;
