--- a/view/footer.html
+++ b/view/footer.html
@@ -24,6 +24,13 @@
             padding-left: 50px;
             width: 35%;
         }
+       .col-1 p i{
+        padding-right: 10px;
+       }
+       .col-4 i{
+        padding-right: 10px;
+        font-size: 30px;
+       }
     </style>
 </head>
 <body>
@@ -34,11 +41,11 @@
                     <img src="../public/img/Màu Be Cổ điển Hình tròn Thời trang Logo (2) 2.png" alt="">
                 </div>
                 <p> <i class="fa-solid fa-house-chimney"> </i>Số 3, Quảng phát, Quảng tiến, Trảng bom, Đồng Nai</p>
-                <p>0385345482</p>
-                <p>nghiandtps39970@gmail.com</p>
+                <p> <i class="fa-solid fa-phone"></i> 0385345482</p>
+                <p> <i class="fa-solid fa-envelope"></i>nghiandtps39970@gmail.com</p>
             </div>
             <div class="col-2">
-                <h2>Thông Tin</h2>
+                <h3>Thông Tin</h3>
                 <p>Về chúng tôi</p>
                 <p>Blog</p>
                 <p>Dịch vụ</p>
@@ -46,14 +53,19 @@
                 <p>Hỗ trợ</p>
             </div>
             <div class="col-3">
-                <h2>Tư vấn</h2>
+                <h3>Chăm Sóc Khách Hàng</h3>
+                <p>Tư vấn</p>
                 <p>Khuyến mãi</p>
                 <p>Chính sách vận chuyển</p>
                 <p>Chính sách thanh toán</p>
                 <p>Chính sách chung</p>
             </div>
             <div class="col-4">
-                <h2>Mạng Xã Hội</h2>
+                <h3>Mạng Xã Hội</h3>
+                <i class="fa-brands fa-facebook"></i> 
+                <i class="fa-brands fa-youtube"></i> 
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
             </div>
         </div>
     </div>
