--- a/public/css/home.css
+++ b/public/css/home.css
@@ -160,3 +160,25 @@ h3{
 .col4 button:hover {
     background-color: #584c39;
 }
+/* footer */
+.container2{
+    background-color: #BDAB8C;
+}
+.row2{
+    margin: 0 auto;
+    display: flex;
+    width: 80%;
+    padding: 50px;
+    gap: 10%;
+}
+.Logo2 img {
+    padding-left: 50px;
+    width: 35%;
+}
+.col-1 p i{
+padding-right: 10px;
+}
+.col-4 i{
+padding-right: 10px;
+font-size: 30px;
+}
