--- a/public/css/home.css
+++ b/public/css/home.css
@@ -82,7 +82,7 @@ ul li a {
 .bannerphu img {
     max-width: 100%;
     height: 250px;
-    margin-top: 20px; 
+    margin-top: 50px; 
 }
 h3{
     font-size: 28px;
@@ -100,7 +100,7 @@ h3{
 
 .row {
     display: flex;
-    padding-top: 50px;
+    padding-top: 30px;
     justify-content: space-around; 
 }
 .col4 {
@@ -174,6 +174,10 @@ h3{
 .Logo2 img {
     padding-left: 50px;
     width: 35%;
+}
+.h3{
+    font-size: 20px;
+    color: black;
 }
 .col-1 p i{
 padding-right: 10px;
