--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,20 @@ body {
     margin: 0;
     padding: 0;
 }
+.bt1{
+    text-align: center;
+    padding: 50px;
+
+
+}
+.bt1 button{
+    height: 50px;
+    width: 320px;
+    font-size: 20px;
+    background-color: #fff;
+    color:#8F7D5E ;
+    border: 1px solid #8F7D5E;
+}
 /* Header */
 header {
     max-width: 1800px;
