--- a/public/css/product-detail.css
+++ b/public/css/product-detail.css
@@ -39,3 +39,17 @@ body {
     height: 20px;
     margin: auto 0;
 }
+.addproduct {
+    display: flex;
+    width: 100%;
+    height: 35px;
+    
+    gap: 5px;
+}
+.addproduct button{
+    display: flex;
+    padding: 0 20px;
+    border-radius:  20px ;
+    align-items: center;
+    background-color: #8F7D5E;
+}
