--- a/public/css/product-detail.css
+++ b/public/css/product-detail.css
@@ -51,5 +51,6 @@ body {
     padding: 0 20px;
     border-radius:  20px ;
     align-items: center;
+    color: white;
     background-color: #8F7D5E;
 }
