--- a/view/addcategory.html
+++ b/view/addcategory.html
@@ -55,7 +55,7 @@ textarea {
 }
 
 button {
-  background-color: #d7b7a8;
+  background-color: #BDAB8C;
   color: white;
   font-size: 16px;
   border: none;
@@ -118,12 +118,12 @@ select {
 
         <label for="category">Category:</label>
         <select id="category">
-        <option value="" disabled selected>Chọn danh mục</option>
-        <option value="vi-tui-sach">Ví-Túi Sách</option>
-        <option value="that-lung">Thắt Lưng</option>
-        <option value="non">Nón</option>
-        <option value="nhan">Nhẫn</option>
-        <option value="day-chuyen">Dây Chuyền</option>
+            <option value="" disabled selected>Chọn danh mục</option>
+            <option value="vi-tui-sach">Ví-Túi Sách</option>
+            <option value="that-lung">Thắt Lưng</option>
+            <option value="non">Nón</option>
+            <option value="nhan">Nhẫn</option>
+            <option value="day-chuyen">Dây Chuyền</option>
         </select>
 
 
