--- a/view/category.html
+++ b/view/category.html
@@ -140,7 +140,7 @@
         <ul>
             <li><a href="#dashboard">Dashboard</a></li>
             <li><a href="#users">Quản lý người dùng</a></li>
-            <li><a href="#products">Quản lý sản phẩm</a></li>
+            <li><a href="adminsp.html">Quản lý sản phẩm</a></li>
             <li><a href="category.html">Quản lý danh mục</a></li>
             <li><a href="#settings">Cài đặt</a></li>
             <li><a href="#logout">Đăng xuất</a></li>
