--- a/view/product-detail.html
+++ b/view/product-detail.html
@@ -99,39 +99,39 @@
         <div class="col3">
             <div class="user">
                 <ul><li><i class="fa-regular fa-user"></i></li></ul>
-                <h4>Dũng</h4>
+                <h4>Trọng Quý</h4>
             </div>
             <ul class="star">
                 <li><i class="fa-solid fa-star"></i></li>
                 <li><i class="fa-solid fa-star"></i></li>
                 <li><i class="fa-solid fa-star"></i></li>
-                <li><i class="fa-solid fa-star"></i></li>
+                <li><i class="fa-regular fa-star"></i></li>
                 <li><i class="fa-regular fa-star"></i></li>
             </ul>
             <div class="quality">
-            <p>Sản phẩm tốt, chất lượng.</p>
+            <p>Sản phẩm ổn, chất liệu êm cầm nắm thoải mái.</p>
             </div>
         </div>
         <div class="col3">
             <div class="user">
                 <ul><li><i class="fa-regular fa-user"></i></li></ul>
-                <h4>Dũng</h4>
+                <h4>Tiến Thành</h4>
             </div>
             <ul class="star">
                 <li><i class="fa-solid fa-star"></i></li>
                 <li><i class="fa-solid fa-star"></i></li>
                 <li><i class="fa-solid fa-star"></i></li>
                 <li><i class="fa-solid fa-star"></i></li>
-                <li><i class="fa-regular fa-star"></i></li>
+                <li><i class="fa-solid fa-star"></i></li>
             </ul>
             <div class="quality">
-            <p>Sản phẩm tốt, chất lượng.</p>
+            <p>Thiết kế sản phẩm tinh tế, có độ bền và độ mềm mịn cao.  </p>
             </div>
         </div>
         <div class="col3">
             <div class="user">
                 <ul><li><i class="fa-regular fa-user"></i></li></ul>
-                <h4>Dũng</h4>
+                <h4>Thái An</h4>
             </div>
             <ul class="star">
                 <li><i class="fa-solid fa-star"></i></li>
@@ -141,7 +141,7 @@
                 <li><i class="fa-regular fa-star"></i></li>
             </ul>
             <div class="quality">
-            <p>Sản phẩm tốt, chất lượng.</p>
+            <p>Kích thước ví gọn gàng, vừa vặn trong túi quần mà không gây cộm.</p>
             </div>
         </div>
         <button class="vietdanhgia">Viết đánh giá</button>
