--- a/view/addproduct.html
+++ b/view/addproduct.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
+    <title>ADMIN SẢN PHẨM</title>
     <style>
     .sidebar {
         width: 250px;
@@ -152,13 +152,13 @@
         
         <div class="col-75">
         <div class="search">
-            <h1>Danh mục</h1>
+            <h1>Sản phẩm</h1>
             <div class="search1">
                 <input type="text" placeholder="Search">
                 <button>Search</button>
             </div>
         </div>
-        <button class="addcategory">Thêm Danh Mục </button>
+        <button class="addcategory">Thêm Sản Phẩm</button>
         <table>
             <thead>
                 <tr>
@@ -170,8 +170,9 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>6</td>
-                    <td>THẮT LƯNG</td>
+                    <td>1</td>
+                    <td>Thắt lưng PIERRE
+                        CARDIN BE-P 2228</td>
                     <td><img src="../public/img/h7.png" alt="Thắt lưng"></td>
                     <td class="">
                         <button class="edit">Sửa</button>
@@ -179,8 +180,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>8</td>
-                    <td>DÂY CHUYỀN</td>
+                    <td>2</td>
+                    <td>Dây chuyền bạc 
+                        nam sợi nhỏ DCK0029</td>
                     <td><img src="../public/img/h13.png" alt="Dây chuyền"></td>
                     <td>
                         <button class="edit">Sửa</button>
@@ -188,8 +190,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>9</td>
-                    <td>Nhẫn</td>
+                    <td>3</td>
+                    <td>Nhẫn nữ đính kim cương Moissanite 10 carat</td>
                     <td><img src="../public/img/h21.png" alt="Kính mát"></td>
                     <td>
                         <button class="edit">Sửa</button>
@@ -198,7 +200,7 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>NÓN</td>
+                    <td>Nón Nữ - Essential Chic Cap</td>
                     <td><img src="../public/img/h4.png" alt="Nón nữ"></td>
                     <td>
                         <button class="edit">Sửa</button>
@@ -206,8 +208,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>3</td>
-                    <td>Ví - Túi xách</td>
+                    <td>5</td>
+                    <td>Ví nữ DWL0072-1</td>
                     <td><img src="../public/img/h17.png" alt="Nón nữ"></td>
                     <td>
                         <button class="edit">Sửa</button>
