--- a/view/lichsumuahang.html
+++ b/view/lichsumuahang.html
@@ -16,7 +16,7 @@
             <span class="completion-text">Hoàn thành</span>
         </div>        
         <div class="order-item">
-            <img src="wallet.jpg" alt="Ví nam Pierre Cardin">
+            <img src="../public/img/h8.png" alt="Ví nam Pierre Cardin">
             <div class="order-details">
                 <h2>VÍ NAM PIERRE CARDIN LW-P 157 CHÍNH HÃNG NHẬP KHẨU</h2>
                 <p>Phân loại hàng: <span>VÍ NAM PIERRE CARDIN LW-P 157</span></p>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="order-item">    
-            <img src="cap.jpg" alt="Nón bóng chày">
+            <img src="../public/img/h15.png" alt="Nón bóng chày">
             <div class="order-details">
                 <h2>Nón bóng chày unisex Pop Varsity Structure</h2>
                 <p>Phân loại hàng: <span>Màu xanh, có hoa văn</span></p>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="order-item">
-            <img src="sunglasses.jpg" alt="Kính mát Gucci">
+            <img src="../public/img/h18.png" alt="Kính mát Gucci">
             <div class="order-details">
                 <h2>Kính Mắt Gucci Eyewear - Sunglasses</h2>
                 <p>Phân loại hàng: <span>Màu nâu, gọng to</span></p>
