--- a/public/css/home.css
+++ b/public/css/home.css
@@ -140,9 +140,9 @@ ul li a {
 
 /* Container */
 .container {
-    width: 90%;
+
     margin: 0 auto;
-    padding: 20px;
+
 }
 
 .row {
@@ -154,7 +154,7 @@ ul li a {
     
 }
 .col4 {
-    max-width: 250px; 
+    width: 250px; 
     height: 350px;
     text-align: center; 
     border-radius: 10px; 
@@ -171,6 +171,7 @@ ul li a {
 
 .col4 img {
     width: 100%;
+    height: 200px;
     border-radius: 10px;
     margin-bottom: 10px;
 }
@@ -298,6 +299,10 @@ font-size: 30px;
   }
 /* detail */
 .container3{
+
+    margin: 0 auto;
+}
+.khung{
     width: 80%;
     margin: 0 auto;
 }
@@ -446,7 +451,7 @@ hr{
     
 }
 .col4-1 {
-    max-width: 300px; 
+    width: 300px; 
     height: 350px;
     text-align: center; 
     border-radius: 10px; 
@@ -463,6 +468,7 @@ hr{
 
 .col4-1 img {
     width: 100%;
+    height: 200px;
     border-radius: 10px;
     margin-bottom: 10px;
 }
