--- a/view/login.html
+++ b/view/login.html
@@ -25,7 +25,7 @@
       <div class="links">
         <a class="a1" href="#">Quên mật khẩu</a>
         <span class="a1">Hoặc đăng nhập qua</span>
-        <a class="a1" href="#">Đăng ký tại đây</a>
+        <a class="a1" href="../view/dangky.html">Đăng ký tại đây</a>
       </div>
       <div class="social-login">
         <a href="#" class="facebook">Facebook</a>
