--- a/view/login.html
+++ b/view/login.html
@@ -28,8 +28,8 @@
         <a class="a1" href="../view/dangky.html">Đăng ký tại đây</a>
       </div>
       <div class="social-login">
-        <a href="#" class="facebook">Facebook</a>
-        <a href="#" class="google">Google</a>
+        <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="google"><i class="fa-brands fa-google"></i></a>
       </div>
     </form>
   </div>
