--- a/view/spnam.html
+++ b/view/spnam.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <div class="product-grid">
-        <!-- Product Card -->
          <div class="row">
         <div class="product-card">
             <img src="../public/img/h9.png" alt="Kính mát Jacques Torino">
             <h3>THẮT LƯNG PIERRE CARDIN BE-P 2228</h3>
             <p class="price">Giá: 2.990.000đ</p>
             <p class="stock">Hàng còn: 12 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
 
         <div class="product-card">
@@ -23,7 +22,7 @@
             <h3>VÍ NAM PIERRE CARDIN LW-P 157</h3>
             <p class="price">Giá: 2.098.000đ</p>
             <p class="stock">Hàng còn: 5 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
 
         <div class="product-card">
@@ -31,7 +30,7 @@
             <h3>KÍNH MẮT JMM Jacques Torino</h3>
             <p class="price">Giá: 2.000.000đ</p>
             <p class="stock">Hàng còn: 15 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
     </div>
 
@@ -41,7 +40,7 @@
             <h3>KÍNH MẮT JMM Jacques Torino</h3>
             <p class="price">Giá: 2.000.000đ</p>
             <p class="stock">Hàng còn: 15 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
 
         <div class="product-card">
@@ -49,7 +48,7 @@
             <h3>KÍNH MẮT JMM Jacques Torino</h3>
             <p class="price">Giá: 2.000.000đ</p>
             <p class="stock">Hàng còn: 15 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
 
         <div class="product-card">
@@ -57,7 +56,7 @@
             <h3>KÍNH MẮT JMM Jacques Torino</h3>
             <p class="price">Giá: 2.000.000đ</p>
             <p class="stock">Hàng còn: 15 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
     </div>
 
@@ -67,7 +66,7 @@
             <h3>KÍNH MẮT JMM Jacques Torino</h3>
             <p class="price">Giá: 2.000.000đ</p>
             <p class="stock">Hàng còn: 15 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
 
         <div class="product-card">
@@ -75,7 +74,7 @@
             <h3>KÍNH MẮT JMM Jacques Torino</h3>
             <p class="price">Giá: 2.000.000đ</p>
             <p class="stock">Hàng còn: 15 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
         </div>
 
         <div class="product-card">
@@ -83,9 +82,18 @@
             <h3>KÍNH MẮT JMM Jacques Torino</h3>
             <p class="price">Giá: 2.000.000đ</p>
             <p class="stock">Hàng còn: 15 cái</p>
-            <button class="buy-button">Mua ngay</button>
+            <button class="button">Mua ngay</button>
+        </div>
+        <div class="pagination">
+            <span class="page active">1</span>
+            <span class="page">2</span>
+            <span class="page">3</span>
+            <span class="page">4</span>
+            <span class="dots">...</span>
         </div>
     </div>
+    
     </div>
+    
 </body>
 </html>
